Changed landing page intro text size to prevent shift.'

--- a/sass/_landing.scss
+++ b/sass/_landing.scss
@@ -38,6 +38,7 @@
 #landing-header {
   color: $white;
   font-size: 7vw;
+  min-height: 15vw;
   margin: 0px;
   padding: 0px;
   font-weight: bold;
@@ -78,6 +79,7 @@
 
   #landing-header {
     font-size: 5vh;
+    min-height: 11vw;
   }
 
   #portfolio-button-container {
